# duper

./: .gitignore  ATTRIBUTIONS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SPEC.md  biome.json  default.nix  duper.code-workspace  duper.cow  flake.nix  justfile  lib.nix  shell.nix  spec.md
axum-duper/: Cargo.toml
axum-duper/src/: lib.rs
axum_duper/: CHANGELOG.md  Cargo.toml  README.md
axum_duper/src/: lib.rs
duper/: CHANGELOG.md  Cargo.toml  README.md
duper-js-node/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  esbuild.mjs  package-lock.json  package.json  tsconfig.json
duper-js-node/.github/workflows/: CI.yml
duper-js-node/lib/: index.ts
duper-js-node/src/: de.rs  lib.rs  ser.rs
duper-js-node/tests/: duper_value.test.ts  parse.test.ts  roundtrip.test.ts  stringify.test.ts
duper-js-node/tests/__snapshots__/: parse.test.ts.snap  roundtrip.test.ts.snap  stringify.test.ts.snap
duper-js-wasm/: .gitignore  .npmignore  CHANGELOG.md  Cargo.toml  README.md  esbuild.js  esbuild.mjs  index.html  package-lock.json  package.json  rollup.config.js  rollup.config.ts  tsconfig.json  ubrn.config.yaml  vite.config.js  vitest.config.ts
duper-js-wasm/examples/vite/: index.html  package-lock.json  package.json  vite.config.js
duper-js-wasm/lib/: index.ts
duper-js-wasm/rust/: Cargo.toml
duper-js-wasm/rust/src/: lib.rs
duper-js-wasm/src/: de.rs  duper_module.rs  index.ts  lib.rs  parse.rs  repr.rs  ser.rs  serialize.rs  temporal.rs
duper-js-wasm/tests/: duper_value.test.ts  parse.test.ts  roundtrip.test.ts  stringify.test.ts
duper-js-wasm/tests/__snapshots__/: parse.test.ts.snap  roundtrip.test.ts.snap  stringify.test.ts.snap
duper-lsp/: Cargo.toml
duper-lsp/src/: main.rs
duper-py/: Cargo.toml  pyproject.toml
duper-py/python/duper/: __init__.py  _duper.pyi  fastapi.py  pydantic.py
duper-py/src/: lib.rs  ser.rs
duper-py/tests/: test_fastapi.py  test_pydantic.py
duper/src/: ast.rs  builder.rs  duper.pest  escape.rs  format.rs  grammar.pest  lib.rs  parser.rs  pretty_printer.rs  serde.rs  serializer.rs  types.rs  validate.rs  visitor.rs
duper/src/parser/: mod.rs  temporal.rs
duper/src/serde/: de.rs  error.rs  meta.rs  mod.rs  ser.rs  temporal.rs
duper/src/snapshots/: duper__pretty_printer__pretty_printer_tests__basic_array.snap  duper__pretty_printer__pretty_printer_tests__basic_object.snap  duper__pretty_printer__pretty_printer_tests__complex_array.snap  duper__pretty_printer__pretty_printer_tests__complex_object.snap  duper__pretty_printer__pretty_printer_tests__empty_array.snap  duper__pretty_printer__pretty_printer_tests__empty_object.snap  duper__pretty_printer__pretty_printer_tests__single_element_array.snap  duper__pretty_printer__pretty_printer_tests__single_element_object.snap
duper/src/visitor/: ansi.rs  mod.rs  pretty_printer.rs  serializer.rs  to_json.rs
duper_lsp/: CHANGELOG.md  Cargo.toml  README.md
duper_lsp/src/: diagnostics.rs  format.rs  main.rs
duper_py/: Cargo.toml  pyproject.toml
duper_py/python/duper/: _duper.pyi  pydantic.py
duper_py/src/: lib.rs  ser.rs  visitor.rs
duper_rpc/: CHANGELOG.md  Cargo.toml  README.md
duper_rpc/src/: de.rs  error.rs  handler.rs  lib.rs  request.rs  response.rs  ser.rs  server.rs
duper_rpc/tests/integration/: axum_handle.rs  main.rs
duper_uniffi/: Cargo.toml  README.md  build.rs  justfile  uniffi.toml
duper_uniffi/csharp/: .gitignore  Duper.cs  Duper.csproj  Duper.nuspec  DuperAttribute.cs  DuperSerializer.cs  README.md
duper_uniffi/dotnet/: CHANGELOG.md  Duper.nuspec  DuperAttribute.cs  DuperDeserializeException.cs  DuperSerializeException.cs  DuperSerializer.cs  README.md  duper.cs
duper_uniffi/example/: Example.cs  example.csproj
duper_uniffi/example/csharp/: Example.cs  Example.csproj  example.csproj
duper_uniffi/src/: duper.udl  index.web.ts  lib.rs  parse.rs  serialize.rs
duper_uniffi/tests/csharp/: Duper.Tests.csproj  DuperSerializerTests.cs
duper_uniffi/tests/dotnet/: Duper.Tests.csproj  DuperSerializerTests.cs
duper_uniffi/wasm/: package-lock.json  package.json  ubrn.config.yaml
duper_website/: .gitignore  Cargo.toml  README.md  duper.ebnf  duper.tmLanguage.duper  duper.tmLanguage.json  ebnf.tmLanguage.duper  package-lock.json  package.json  tsconfig.json
duper_website/docs/: duperfmt.md  guide-dotnet.md  guide-javascript.md  guide-python.md  guide-rust.md  index.md  intro-to-duper.md  quick-start.md  spec.md  vs-code.md
duper_website/docs/.vitepress/: config.mts  source.ebnf.ts
duper_website/src/: lib.rs  temporal.rs  visitor.rs
duper_zed/: Cargo.toml  README.md  extension.toml
duper_zed/src/: lib.rs
duperfmt/: CHANGELOG.md  Cargo.toml  README.md
duperfmt/src/: duper.scm  lib.rs  main.rs
duperq/: CHANGELOG.md  Cargo.toml  README.md
duperq/src/: accessor.rs  duperq.md  filter.rs  formatter.rs  lib.rs  main.rs  processor.rs  query.rs  types.rs
godot_duper/: Cargo.toml  README.md
godot_duper/src/: lib.rs
serde-duper/: Cargo.toml
serde-duper-macros/: Cargo.toml
serde-duper-macros/src/: lib.rs
serde-duper/src/: bytes.rs  de.rs  error.rs  lib.rs  ser.rs  types.rs
serde-duper/tests/: basic.rs  macros.rs  none_types.rs  struct.rs  types.rs  types_option_none.rs  types_option_some.rs  types_plain.rs
serde_duper/: CHANGELOG.md  Cargo.toml  README.md
serde_duper/src/: bytes.rs  de.rs  deserializer.rs  error.rs  lib.rs  ser.rs  serializer.rs
serde_duper/tests/: basic.rs  macros.rs  struct.rs  types_option_none.rs  types_option_some.rs  types_plain.rs
serde_duper_macros/: CHANGELOG.md  Cargo.toml  README.md
serde_duper_macros/src/: lib.rs
tracing_duper/: CHANGELOG.md  Cargo.toml  README.md
tracing_duper/examples/: simple.rs
tracing_duper/src/: lib.rs
tree-sitter-duper/: CHANGELOG.md  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  topiary-duper.ncl  tree-sitter.json
tree-sitter-duper/queries/: highlights.scm
tree-sitter-duper/src/: grammar.json  node-types.json  parser.c  scanner.c
(+155 files in other folders)
