[workspace]
resolver = "3"
members = [
  "axum_duper",
  "duper",
  "duper-js-wasm/rust",
  "duper-python",
  "duperfmt",
  "duper_lsp",
  "duper_uniffi",
  "duper_website",
  "serde_duper",
  "serde_duper_macros",
  "tree-sitter-duper", "duperq",
]

[profile.release]
lto = true
strip = "debuginfo"
