[workspace]
resolver = "3"
members = [
  "axum_duper",
  "duper",
  "duperfmt",
  "duperq",
  "duper-js-node",
  "duper-js-wasm/rust",
  "duper-python",
  "duper_lsp",
  "duper_uniffi",
  "duper_website",
  "godot_duper",
  "serde_duper",
  "serde_duper_macros",
  "tracing_duper",
  "tree-sitter-duper",
]

[profile.release]
lto = true
strip = "debuginfo"
