[package]
name = "axum-duper"
description = "Axum extractor/response for Duper."
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Eric Rodrigues Pires <eric@eric.dev.br>"]

[dependencies]
axum = { version = "0.8.6", default-features = false }
serde_core = "1.0.228"
serde-duper = { path = "../serde-duper" }

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.18.1", features = ["serde"] }
