[package]
name = "axum_duper"
description = "Axum extractor/response for Duper."
version = "0.4.3"
edition = "2024"
rust-version = "1.88"
license = "MIT"
authors = ["Eric Rodrigues Pires <eric@eric.dev.br>"]
repository = "https://github.com/EpicEric/duper"
homepage = "https://duper.dev.br"
readme = "README.md"
categories = ["encoding", "parser-implementations"]
keywords = ["duper", "serde", "axum"]

[dependencies]
axum = { version = "0.8", default-features = false }
duper = { workspace = true, features = ["ansi"] }
serde_core = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
uuid = { workspace = true }
