[package]
name = "axum_duper"
description = "Axum extractor/response for Duper."
version = "0.4.4"
edition = "2024"
rust-version.workspace = true
license = "MIT"
authors = ["Eric Rodrigues Pires <eric@eric.dev.br>"]
repository = "https://github.com/EpicEric/duper"
homepage = "https://duper.dev.br"
readme = "README.md"
categories = ["encoding", "parser-implementations"]
keywords = ["duper", "serde", "axum"]

[dependencies]
axum-core = { version = "0.5", default-features = false }
duper = { workspace = true }
http = "1"
serde_core = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
uuid = { workspace = true }
