[package]
name = "duper-js-wasm"
description = "The format that's super!"
edition = "2024"
rust-version = "1.88"
license = "MIT"
authors = ["Eric Rodrigues Pires <eric@eric.dev.br>"]
repository = "https://github.com/EpicEric/duper"
homepage = "https://github.com/EpicEric/duper"
readme = "README.md"
categories = ["encoding", "parser-implementations"]
keywords = ["duper", "serialization", "wasm"]
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
duper = { path = "../duper", version = "0.2.0" }
js-sys = "0.3.81"
miette = "7.6.0"
wasm-bindgen = "0.2.104"

[profile.release]
lto = true
