[package]
name = "duper-lsp"
description = "Language Server for Duper."
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Eric Rodrigues Pires <eric@eric.dev.br>"]

[dependencies]
async-lsp = { version = "0.2.2", features = ["tokio"] }
duper = { path = "../duper" }
futures = "0.3.31"
pest = "2.8.3"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
