[package]
name = "duper-py"
description = "The format that's super."
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Eric Rodrigues Pires <eric@eric.dev.br>"]

[lib]
name = "_duper"
crate-type = ["cdylib"]

[dependencies]
duper = { path = "../duper" }
pyo3 = { version = "0.26.0", features = ["extension-module"] }
