[project]
name = "duper-py"
description = "The format that's super."
license = "MIT"
authors = [{ name = "Eric Rodrigues Pires", email = "eric@eric.dev.br" }]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "duper._duper"
features = ["pyo3/extension-module"]
bindings = "pyo3"

[dependency-groups]
dev = ["maturin>=1.9.6", "pytest>=8.4.2"]
