[package]
name = "duper"
description = "The format that's super!"
version = "0.6.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
authors = ["Eric Rodrigues Pires <eric@eric.dev.br>"]
repository = "https://github.com/EpicEric/duper"
homepage = "https://duper.dev.br"
readme = "README.md"
categories = ["encoding", "parser-implementations"]
keywords = ["duper", "parser", "serialization"]

[features]
default = []
ansi = ["dep:owo-colors"]
serde = ["dep:serde_core"]

[dependencies]
ariadne = { version = "0.6", features = ["auto-color"] }
base64 = { workspace = true }
chumsky = { workspace = true }
decorum = "0.4"
either = "1"
indexmap = "2"
owo-colors = { version = "4", optional = true }
ryu = "1"
serde_core = { workspace = true, optional = true }
unicode-general-category = "1"

[dev-dependencies]
insta = { workspace = true }
serde = { workspace = true }
