[package]
name = "duper_lsp"
description = "LSP implementation for Duper."
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
authors = ["Eric Rodrigues Pires <eric@eric.dev.br>"]
repository = "https://github.com/EpicEric/duper"
homepage = "https://duper.dev.br"
readme = "README.md"
publish = false

[dependencies]
async-lsp = { version = "0.2.2", features = ["tokio"] }
base64 = "0.22.1"
duper = { version = "0.4.1", path = "../duper" }
futures = "0.3.31"
line-index = "0.1.2"
lsp-types = "0.95.0"
regex = "1.12.2"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["compat"] }
topiary-core = "0.7.1"
topiary-tree-sitter-facade = "0.7.1"
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tree-sitter = { version = "0.25.10", features = ["wasm"] }
tree-sitter-duper = { version = "0.1.0", path = "../tree-sitter-duper" }
uuid = "1.18.1"

[build-dependencies]
cc = "*"
