[package]
name = "duper_lsp"
description = "LSP implementation for Duper."
version = "0.1.3"
edition = "2024"
rust-version = "1.88"
license = "MIT"
authors = ["Eric Rodrigues Pires <eric@eric.dev.br>"]
repository = "https://github.com/EpicEric/duper"
homepage = "https://duper.dev.br"
readme = "README.md"
categories = ["development-tools"]
keywords = ["duper", "lsp", "formatting"]

[dependencies]
async-lsp = { version = "0.2.2", features = ["tokio"] }
base64 = "0.22.1"
clap = { version = "4.5.53", features = ["derive"] }
duper = { version = "0.5", path = "../duper" }
duperfmt = { version = "0.1", path = "../duperfmt" }
futures = "0.3.31"
line-index = "0.1.2"
lsp-types = "0.95.0"
regex = "1.12.2"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["compat"] }
tower = "0.5.2"
tracing = "0.1"
tracing-subscriber = "0.3"
tree-sitter = { version = "0.25.10", features = ["wasm"] }
tree-sitter-duper = { version = "0.1", path = "../tree-sitter-duper" }
uuid = "1.18.1"

[build-dependencies]
cc = "1"
