[package]
name = "duper_lsp"
description = "LSP implementation for Duper."
version = "0.1.4"
edition = "2024"
rust-version = "1.88"
license = "MIT"
authors = ["Eric Rodrigues Pires <eric@eric.dev.br>"]
repository = "https://github.com/EpicEric/duper"
homepage = "https://duper.dev.br"
readme = "README.md"
categories = ["development-tools"]
keywords = ["duper", "lsp", "formatting"]

[dependencies]
async-lsp = { version = "0.2.2", features = ["tokio"] }
base64 = { workspace = true }
clap = { workspace = true }
duper = { workspace = true, features = ["ansi", "serde"] }
duperfmt = { workspace = true }
futures = { workspace = true }
ipnet = { workspace = true, features = ["serde"] }
line-index = "0.1.2"
lsp-types = "0.95.0"
regex = { workspace = true }
rust_decimal = { workspace = true, features = ["macros", "serde-str"] }
tokio = { workspace = true }
tokio-util = { version = "0.7.17", features = ["compat"] }
tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["fmt", "registry"] }
tree-sitter = { workspace = true }
tree-sitter-duper = { workspace = true }
uuid = { workspace = true, features = ["serde"] }

[build-dependencies]
cc = { workspace = true }
