[project]
name = "duper-py"
description = "The format that's super."
license = "MIT"
authors = [{ name = "Eric Rodrigues Pires", email = "eric@eric.dev.br" }]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]

[dependency-groups]
dev = ["maturin>=1.9.6"]
