[package]
name = "duper_rpc"
description = "An RPC implementation for Duper."
version = "0.2.0"
edition = "2024"
rust-version.workspace = true
license = "MIT"
authors = ["Eric Rodrigues Pires <eric@eric.dev.br>"]
repository = "https://github.com/EpicEric/duper"
homepage = "https://duper.dev.br"
readme = "README.md"
categories = ["web-programming"]
keywords = ["duper", "rpc", "http"]

[features]
default = ["tokio"]
smol = ["dep:smol"]
tokio = ["dep:tokio"]

[dependencies]
duper = { workspace = true, features = ["serde"] }
futures.workspace = true
serde_core = { workspace = true }
smol = { workspace = true, optional = true }
tokio = { version = "^1", optional = true, features = ["rt"] }
tower = { workspace = true }

[dev-dependencies]
axum = { version = "^0.8" }
axum_duper = { workspace = true }
http-body-util = "0.1.3"
reqwest = "0.13.1"
serde = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
