[package]
name = "duper_uniffi"
description = "UniFFI bindings for Duper."
edition = "2024"
rust-version = "1.88"
license = "MIT"
authors = ["Eric Rodrigues Pires <eric@eric.dev.br>"]
repository = "https://github.com/EpicEric/duper"
homepage = "https://duper.dev.br"
readme = "README.md"
categories = ["encoding", "parser-implementations"]
keywords = ["duper", "serialization", "python"]
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
duper = { workspace = true, features = ["ansi", "serde"] }
thiserror = { workspace = true }
uniffi = { version = "0.29.4", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.29.4", features = ["build"] }
