[package]
name = "duper_website"
edition = "2024"
rust-version = "1.88"
license = "MIT"
authors = ["Eric Rodrigues Pires <eric@eric.dev.br>"]
repository = "https://github.com/EpicEric/duper"
homepage = "https://duper.dev.br"
readme = "README.md"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
duper = { path = "../duper", features = ["serde"] }
js-sys = "0.3.81"
saphyr = "0.0.6"
serde = "1.0.228"
serde_json = "1.0.145"
toml = { version = "0.9.8", features = ["preserve_order"] }
wasm-bindgen = "0.2.105"
