[package]
name = "duper_website"
edition = "2024"
rust-version = "1.88"
license = "MIT"
authors = ["Eric Rodrigues Pires <eric@eric.dev.br>"]
repository = "https://github.com/EpicEric/duper"
homepage = "https://duper.dev.br"
readme = "README.md"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = { workspace = true }
duper = { workspace = true, features = ["ansi"] }
js-sys = "0.3"
saphyr = "0.0.6"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { version = "0.9", features = ["preserve_order"] }
wasm-bindgen = { workspace = true }
