[package]
name = "duperq"
description = "LSP implementation for Duper."
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
authors = ["Eric Rodrigues Pires <eric@eric.dev.br>"]
repository = "https://github.com/EpicEric/duper"
homepage = "https://duper.dev.br"
readme = "README.md"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chumsky = "0.11.2"
clap = { version = "4.5.53", features = ["derive"] }
duper = { version = "0.4.3", path = "../duper", features = ["ansi"] }
futures = "0.3.31"
num_cpus = "1.17.0"
regex = "1.12.2"
smol = "2.0.2"
temporal_rs = "0.1.2"
