[package]
name = "duperq"
description = "LSP implementation for Duper."
version = "0.1.2"
edition = "2024"
rust-version = "1.88"
license = "MIT"
authors = ["Eric Rodrigues Pires <eric@eric.dev.br>"]
repository = "https://github.com/EpicEric/duper"
homepage = "https://duper.dev.br"
readme = "README.md"
categories = ["command-line-utilities", "development-tools::debugging"]
keywords = ["duper", "filter"]

[dependencies]
approx = "0.5.1"
async-trait = "0.1.89"
chumsky = { workspace = true }
clap = { workspace = true }
color-eyre = { version = "0.6.5", default-features = false }
duper = { workspace = true, features = ["serde"] }
futures = { workspace = true }
num_cpus = "1.17.0"
regex = { workspace = true }
smol = "2.0.2"
temporal_rs = { workspace = true }

[dev-dependencies]
glob = "0.3.3"
piper = "0.2.4"
