[package]
name = "serde-duper-macros"
description = "Macros for serde-duper."
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Eric Rodrigues Pires <eric@eric.dev.br>"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.101"
quote = "1.0.41"
syn = { version = "2.0.106", features = ["full"] }

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
