[package]
name = "serde_duper"
description = "Serde support for Duper."
version = "0.2.2"
edition = "2024"
rust-version = "1.88"
license = "MIT"
authors = ["Eric Rodrigues Pires <eric@eric.dev.br>"]
repository = "https://github.com/EpicEric/duper"
homepage = "https://duper.dev.br"
readme = "README.md"
categories = ["encoding", "parser-implementations"]
keywords = ["duper", "serde", "serialization"]

[features]
default = []

# Macros
macros = ["dep:serde_duper_macros"]

# Type dependencies
bytes = ["dep:bytes"]
chrono = ["dep:chrono"]
decimal = ["dep:rust_decimal"]
ipnet = ["dep:ipnet"]
regex = ["dep:regex"]
uuid = ["dep:uuid"]

[dependencies]
# Core dependencies
duper = { path = "../duper", version = "0.2.2", features = ["serde"] }
serde_bytes = "0.11"
serde_core = "1"

# Macros
serde_duper_macros = { path = "../serde_duper_macros", version = "0.1.1", optional = true }

# Type dependencies
bytes = { version = "1", features = ["serde"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
ipnet = { version = "2", features = ["serde"], optional = true }
regex = { version = "1", optional = true }
rust_decimal = { version = "1", features = ["serde-str"], optional = true }
uuid = { version = "1", features = ["serde"], optional = true }

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
rust_decimal = { version = "1", features = ["serde-str", "macros"] }
