[package]
name = "serde_duper"
description = "Serde support for Duper."
version = "0.4.3"
edition = "2024"
rust-version.workspace = true
license = "MIT"
authors = ["Eric Rodrigues Pires <eric@eric.dev.br>"]
repository = "https://github.com/EpicEric/duper"
homepage = "https://duper.dev.br"
readme = "README.md"
categories = ["encoding", "parser-implementations"]
keywords = ["duper", "serde", "serialization"]

[features]
default = []

# Macros
macros = ["dep:serde_duper_macros"]

# Type dependencies
bytes = ["dep:bytes"]
chrono = ["dep:chrono"]
decimal = ["dep:rust_decimal"]
ipnet = ["dep:ipnet"]
regex = ["dep:regex"]
temporal = ["dep:temporal_rs"]
uuid = ["dep:uuid"]

[dependencies]
# Main dependencies
duper = { workspace = true }
serde_core = { workspace = true }
serde_bytes = "0.11"

# Type dependencies
bytes = { workspace = true, features = ["serde"], optional = true }
chrono = { workspace = true, optional = true }
ipnet = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
rust_decimal = { workspace = true, features = ["serde-str"], optional = true }
temporal_rs = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

# Macros
serde_duper_macros = { path = "../serde_duper_macros", version = "0.1.1", optional = true }

[dev-dependencies]
chrono = { workspace = true }
rust_decimal = { workspace = true, features = ["macros", "serde-str"] }
serde = { workspace = true }
uuid = { workspace = true }
