[package]
name = "serde_duper_macros"
description = "Macros for serde_duper."
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
authors = ["Eric Rodrigues Pires <eric@eric.dev.br>"]
repository = "https://github.com/EpicEric/duper"
homepage = "https://duper.dev.br"
readme = "README.md"
categories = ["encoding", "parser-implementations"]
keywords = ["duper", "serde", "macro"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
