[package]
name = "tracing_duper"
description = "A tracing subscriber for the Duper format."
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
authors = ["Eric Rodrigues Pires <eric@eric.dev.br>"]
repository = "https://github.com/EpicEric/duper"
homepage = "https://duper.dev.br"
readme = "README.md"

[features]
default = ["chrono"]
chrono = ["dep:chrono"]

[dependencies]
chrono = { version = "0.4", optional = true }
duper = { version = "0.5.0", path = "../duper", features = ["serde"] }
tracing-core = "0.1"
tracing-subscriber = "0.3"
