[package]
name = "tracing_duper"
description = "A tracing subscriber for the Duper format."
version = "0.1.1"
edition = "2024"
rust-version.workspace = true
license = "MIT"
authors = ["Eric Rodrigues Pires <eric@eric.dev.br>"]
repository = "https://github.com/EpicEric/duper"
homepage = "https://duper.dev.br"
readme = "README.md"
categories = ["development-tools::debugging"]
keywords = ["duper", "tracing"]

[features]
default = ["chrono"]
chrono = ["dep:chrono"]

[dependencies]
chrono = { workspace = true, optional = true, features = ["serde"] }
duper = { workspace = true, features = ["ansi", "serde"] }
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "std",
  "registry",
  "fmt",
] }

[dev-dependencies]
serde_duper = { version = "0.4", path = "../serde_duper" }
tracing = { workspace = true }
