[package]
name = "tree-sitter-duper"
description = "The format that's super!"
version = "0.1.1"
authors = ["Eric Rodrigues Pires <eric@eric.dev.br>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "duper"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/epiceric/duper"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
