[dependencies]
wasm-bindgen = "*"

[dependencies.duper_uniffi]
path = "../../duper_uniffi"

[dependencies.uniffi-runtime-javascript]
features = ["wasm32"]
version = "=0.29.3-1"

[features]
default = []

[lib]
crate-type = ["cdylib", "rlib"]

[package]
edition = "2018"
name = "duper-js-wasm"
version = "0.4.0"

[profile.release]
opt-level = "s"
